# servegg

./: .gitignore  .gitmodules  README.md  backup.sh
langtest/: CMakeCache.txt  Makefile  _Makefile  a.out  dangerous_smart_pointer.cpp  for_test.cpp  function_pointer.cpp  ifauto.cpp  lambda.cpp  langtest  main  main.cpp  runme  shared_ptr.cpp  sstream.cpp  stl_print.cpp  template.cpp
langtest/libevent/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  evt  evt_test.c  evtimout_test.c  example-libevent.cpp  run.sh  xxx
pb/: IM.BaseDefine.proto  IM.Login.proto  IM.Server.proto
pb/cpp/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.File.pb.cc  IM.File.pb.h  IM.Group.pb.cc  IM.Group.pb.h  IM.Login.pb.cc  IM.Login.pb.h  IM.Message.pb.cc  IM.Message.pb.h  IM.Other.pb.cc  IM.Other.pb.h  IM.Server.pb.cc  IM.Server.pb.h  IM.SwitchService.pb.cc  IM.SwitchService.pb.h
src/base/: BaseSocket.cpp  BaseSocket.h  CMakeCache.txt  CMakeLists.txt  EventDispatch.cpp  ImLog.h  ImPduBase.h  Makefile  ServInfo.h  cmake_install.cmake  imconn.cpp  imconn.h  netconn.cpp  netconn.h  netconn.hpp  netlib.cpp  netlib.h  util.cpp  util.h
src/base/pb/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Login.pb.cc  IM.Server.pb.cc
src/client/: CMakeCache.txt  CMakeLists.txt  ClientConn.cpp  ClientConn.h  ClientShell.cpp  ClientWorker.cpp  ClientWorker.h  Makefile  client.cpp  cmake_install.cmake  log4cxx.properties
src/db_proxy_server/: CMakeCache.txt  CMakeLists.txt  Makefile  ProxyConn.cpp  cmake_install.cmake  db_proxy_server.cbp  db_proxy_server.cpp  run.sh
src/db_proxy_server/business/: Register.cpp
src/file_server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  file_server.cpp
src/http_msg_server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/langtest/: CMakeLists.txt  c_array.cpp  cmake_install.cmake  stacktrace.cpp
src/lib/: liblog4cxx.la
src/log4cxx/lib/pkgconfig/: liblog4cxx.pc
src/login_server/: CMakeCache.txt  CMakeLists.txt  HttpConn.cpp  LoginConn.cpp  Makefile  cmake_install.cmake  log4cxx.properties  login_server  login_server.cpp  loginserver.cbp  loginserver.conf  run.sh  tags
src/msfs/: CMakeCache.txt  CMakeLists.txt  HttpConn.cpp  Makefile  cmake_install.cmake  main.cpp  msfs  msfs.conf  run.sh
src/msg_server/: CMakeCache.txt  CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.cpp  FileServConn.cpp  GroupChat.cpp  LoginServConn.cpp  Makefile  MsgConn.cpp  MsgConn.h  PushServConn.cpp  RouteServConn.cpp  cmake_install.cmake  msg_server.cpp  msgserver.cbp  msgserver.conf  run.sh
src/mysub/client_shell/: CMakeCache.txt  CMakeLists.txt  Makefile  client_shell  client_shell.cpp  client_shell.h  cmake_install.cmake  main.cpp
src/mysub/eggsing/: CMakeCache.txt  CMakeLists.txt  EgClient.h  EgLoginServer.h  Makefile  cmake_install.cmake  config.json  main.cpp
src/mysub/eggsing/egnet/: EgBuffer.h  EgCommon.h  EgConn.h  EgImConn.cpp  EgImConn.h  EgIo.cpp  EgIo.h  EgPdu.h  EgUtil.cpp  EgUtil.h
src/mysub/eggsing/third/include/: ostype.h  slog_api.h
src/mysub/eggsing/third/src/net/: HttpClient.cpp
src/mysub/eggsing/third/src/util/: util.cpp  util.h
src/mysub/langtest/: a.out  callback.cpp  copy_constructor.cpp  dynamic_cast.cpp  eval_func_arg.cpp  highorder_bug.cpp  move_sematic.cpp  objectarray.cpp
src/mysub/net/c_netlib/: BaseSocket.cpp  BaseSocket.h  EventDispatch.cpp  EventDispatch.h  RefObject.cpp  RefObject.h  netlib.cpp
src/mysub/net/cpp_netlib/: base_handler.hpp  base_io_stream.h  base_socket.hpp  base_type.h  epoll_io_loop.cpp  io_loop.cpp  io_loop.h  ssl_client_async.cpp  tcp_client_async.h  tcp_server.h  tcp_session_async.h
src/mysub/util/: Timer.hpp  a.out  base_thread.hpp  simplebuffer.hpp  test.cpp  util.cpp  util.h
src/protobuf/lib/: libprotobuf-lite.so.9.0.1
src/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
src/push_server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eggsingcert.pem  eggsingkey.pem
src/route_server/: CMakeCache.txt  CMakeLists.txt  Makefile  RouteConn.cpp  cmake_install.cmake  route_server  route_server.cpp  routeserver.cbp
src/slog/: CMakeCache.txt  Makefile  cmake_install.cmake
src/test/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  ClientConn.cpp  ClientConn.h  ClientShell.cpp  ClientWorker.cpp  ClientWorker.h  Makefile  client.cbp  cmake_install.cmake  log4cxx.properties  rerun.sh  run.sh  test_client.cpp
tools/: du.out  du.out.sort
